# ESP32-Multi-OS-Launcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
components/esp_launcher/: CMakeLists.txt  Kconfig
components/esp_launcher/include/: esp_launcher.h
components/esp_launcher/src/: esp_launcher.c  launcher_installer.c  launcher_storage.c  launcher_ui.c
docs/: AHH-1.0_PIN_UPDATE.md  HARDWARE_PINOUT.md  INTEGRATION_GUIDE.md  SD_FIRMWARE_PACKAGING.md
main/: CMakeLists.txt  main.c
